# simple-nn

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  build.sh  simple-nn.cabal
.github/workflows/: compile.yml
src/: Main.hs  nn.hs
src/NN/: Activation.hs  Network.hs  Training.hs  Types.hs
